--- a/02.prometheus.yaml
+++ b/02.prometheus.yaml
@@ -12,7 +12,7 @@ spec:
       name: http-prometheus
       protocol: HTTP
     hosts:
-    - "prometheus.ingress-ip"
+    - "prometheus.a77a61e85b85a46198645ac29a1ebbfd-e856e794d398b3ae.elb.us-east-1.amazonaws.com"
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -21,7 +21,7 @@ metadata:
   namespace: istio-system
 spec:
   hosts:
-  - "prometheus.ingress-ip"
+  - "prometheus.a77a61e85b85a46198645ac29a1ebbfd-e856e794d398b3ae.elb.us-east-1.amazonaws.com"
   gateways:
   - prometheus-gateway
   http:
