--- a/04.jaeger.yaml
+++ b/04.jaeger.yaml
@@ -12,7 +12,7 @@ spec:
       name: http-tracing
       protocol: HTTP
     hosts:
-    - "tracing.a77a61e85b85a46198645ac29a1ebbfd-e856e794d398b3ae.elb.us-east-1.amazonaws.com"
+    - "tracing.learningservicemesh.com"
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
@@ -21,7 +21,7 @@ metadata:
   namespace: istio-system
 spec:
   hosts:
-  - "tracing.a77a61e85b85a46198645ac29a1ebbfd-e856e794d398b3ae.elb.us-east-1.amazonaws.com"
+  - "tracing.learningservicemesh.com"
   gateways:
   - tracing-gateway
   http:
